--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1 id="judul">hello world !!!</h1>
+    <div class="container">
+        <div class="kelas1">
+            <p>Kelas 1</p>
+        </div>
+        <div class="kelas2">
+            <p>Kelas 2</p>
+        </div>
+        <div class="kelas3">
+            <p>Kelas 3</p>
+        </div>
+    </div>
+
 </body>
 <script src="script.js"></script>
 
