--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="kelas1">
+      <!-- <div class="kelas1">
             <p>Kelas 1</p>
         </div>
         <div class="kelas2">
@@ -19,10 +18,13 @@
         </div>
         <div class="kelas3">
             <p>Kelas 3</p>
-        </div>
+        </div> -->
+      <div class="modal">
+        <div class="close"><div>x</div></div>
+        <p>anda jelek</p>
+      </div>
+      <button class="btn btn-primmary">click here !!!</button>
     </div>
-
-</body>
-<script src="script.js"></script>
-
+  </body>
+  <script src="script.js"></script>
 </html>
