--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <div class="kelas3">
             <p>Kelas 3</p>
         </div> -->
-      <div class="modal">
-        <div class="close"><div>x</div></div>
+      <div id="modal" class="modal">
+        <div class="close">
+          <div>x</div>
+        </div>
         <p>anda jelek</p>
       </div>
       <button class="btn btn-primmary">click here !!!</button>
