--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div id="container" class="container">
       <!-- <div class="kelas1">
             <p>Kelas 1</p>
         </div>
