--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <p>anda jelek</p>
       </div>
-      <button class="btn btn-primmary">click here !!!</button>
+      <button id="btn" class="btn btn-primmary">click here !!!</button>
     </div>
   </body>
   <script src="script.js"></script>
