--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="close">
           <div>x</div>
         </div>
-        <p>anda jelek</p>
+        <p>anda jelek banget</p>
       </div>
       <button id="btn" class="btn btn-primmary">click here !!!</button>
     </div>
