--- a/index.html
+++ b/index.html
@@ -9,24 +9,21 @@
   </head>
 
   <body>
-    <div id="container" class="container">
-      <div class="kelas1">
-        <p>Kelas 1</p>
-      </div>
-      <div class="kelas2">
-        <p>Kelas 2</p>
-      </div>
-      <div class="kelas3">
-        <p>Kelas 3</p>
-      </div>
-      <div id="modal" class="modal">
-        <div class="close">
-          <div>x</div>
+    <div class="container">
+      <div class="header">
+        <div class="nav">
+          <div class="logo">
+            <img src="apple-logo.png" alt="apple" />
+          </div>
+          <ul>
+            <li>Home</li>
+            <li>Preference</li>
+            <li>About</li>
+          </ul>
         </div>
-        <p>anda jelek banget</p>
       </div>
-      <button id="btn" class="btn btn-primmary">click here !!!</button>
     </div>
   </body>
   <script src="script.js"></script>
 </html>
+<!-- cuba -->
