--- a/index.html
+++ b/index.html
@@ -9,21 +9,8 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="header">
-        <div class="nav">
-          <div class="logo">
-            <img src="apple-logo.png" alt="apple" />
-          </div>
-          <ul>
-            <li>Home</li>
-            <li>Preference</li>
-            <li>About</li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    <div class="container"></div>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
 <!-- cuba -->
