--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
   <body>
     <div class="container"></div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <!-- <script src="Submission/twoSum.js"></script> -->
+    <!-- <script src="Submission/romanToInt.js"></script> -->
+    <script src="Submission/isPalindrome.js"></script>
   </body>
 </html>
 <!-- cuba -->
