--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- <script src="script.js"></script> -->
     <!-- <script src="Submission/twoSum.js"></script> -->
     <!-- <script src="Submission/romanToInt.js"></script> -->
-    <script src="Submission/isPalindrome.js"></script>
+    <!-- <script src="Submission/isPalindrome.js"></script> -->
+    <script src="Submission/longestCommonPrefix.js"></script>
   </body>
 </html>
 <!-- cuba -->
