--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <!-- <script src="Submission/twoSum.js"></script> -->
     <!-- <script src="Submission/romanToInt.js"></script> -->
     <!-- <script src="Submission/isPalindrome.js"></script> -->
-    <script src="Submission/longestCommonPrefix.js"></script>
+    <!-- <script src="Submission/longestCommonPrefix.js"></script> -->
     <!-- <script src="Submission/validParentheses.js"></script> -->
+    <script src="Submission/mergeTwoLists.js"></script>
   </body>
 </html>
 <!-- cuba -->
