--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <!-- <script src="Submission/isPalindrome.js"></script> -->
     <!-- <script src="Submission/longestCommonPrefix.js"></script> -->
     <!-- <script src="Submission/validParentheses.js"></script> -->
-    <script src="Submission/mergeTwoLists.js"></script>
+    <!-- <script src="Submission/mergeTwoLists.js"></script> -->
+    <!-- <script src="LogictTestRefactory/biggestNumber.js"></script> -->
+    <!-- <script src="LogictTestRefactory/multiple.js"></script> -->
+    <!-- <script src="LogictTestRefactory/reverseWords.js"></script> -->
+    <!-- <script src="LogictTestRefactory/alternateCase.js"></script> -->
+    <script src="LogictTestRefactory/findMiddleAlphabet.js"></script>
   </body>
 </html>
 <!-- cuba -->
