--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <!-- <script src="LogictTestRefactory/multiple.js"></script> -->
     <!-- <script src="LogictTestRefactory/reverseWords.js"></script> -->
     <!-- <script src="LogictTestRefactory/alternateCase.js"></script> -->
-    <script src="LogictTestRefactory/findMiddleAlphabet.js"></script>
+    <!-- <script src="LogictTestRefactory/findMiddleAlphabet.js"></script> -->
+    <script src="LogictTestRefactory/nearestFibonacci.js"></script>
   </body>
 </html>
 <!-- cuba -->
